--- a/decks/templates/decks/deck_form.html
+++ b/decks/templates/decks/deck_form.html
@@ -7,12 +7,10 @@
     <p>Instructions<br></p>
 </div>
 <div class="instructions-list">
-    <p>1. This is the page where where you can edit the title and description of your flashcard set and publish or unpublish it.<br></p>
+    <p>1. This is the page where where you can edit the title and description of your flashcard set.<br></p>
     <p>2. Input the title of this flashcard set under "Name:".<br></p>
     <p>3. Input the description of this flashcard set under "Description:".<br></p>
-    <p>4. Publish this flashcard set by clicking the little box until a checkmark is shown.<br></p>
-    <p>5. Unpublish this flashcard set by clicking the little box until a checkmark is not shown.</p>
-    <p>6. Once done, click the "Save" button.</p>
+    <p>4. Once done, click the "Save" button.</p>
 </div>
 <div class="deck_form_container">
 <form method="post" class="deck-form">{% csrf_token %}
